# ingestion

./: .dockerignore  .gitignore  Dockerfile  PHASE0a_STATUS.md  deploy_self_optimization.py  pyproject.toml  requirements.txt  test_metrics.py  test_phase2.py  test_phase2_simple.py
.github/: copilot-instructions.md
.github/instructions/: architecture-guidelines.instructions.md  refactoring-guidelines.instructions.md  research-guidelines.instructions.md  research-negative-acceptance.instructions.md  reviewer-gate-fast-checklist.instructions.md
.github/workflows/: pipeline-contract.yml
app/: __init__.py  action_queue.py  advice_auto.py  agent.py  agent_coordinator.py  agent_defaults.py  agent_state.py  analytics_service.py  anomaly_detector.py  answer.py  approval_auto.py  async_coach.py  audit_trail.py  auth.py  backup_strategy.py  baseline_recorder.py  capability_paths.py  chat_google.py  chat_telegram.py  chat_whatsapp.py  coaching_domains.py  code_metrics.py  code_writing_service.py  competency_model.py  confidence_scorer.py  config.py  config_manager.py  connection_pool_metrics.py  connector_state.py  consolidation.py  context_builder.py  context_selector.py  cross_domain_learner.py  cross_session_learner.py  db_client.py  db_safety.py  decide_message.py  diff_gate.py  document_generator.py  domain_separation.py  (+94 more)
app/agent_provider_loop/: __init__.py  smoke_test.py
app/channels/: __init__.py  base.py  discord.py  manager.py  telegram.py  whatsapp.py
app/dashboard/: README.md  __init__.py  api.py  api_incidents.py  api_services.py  reload_skills_button.py  websocket.py
app/domains/: __init__.py  communication.py  fitness.py  ideas.py  linkedin.py  mediaserver.py  nutrition.py  presentation.py  work.py
app/jobs/: __init__.py  alias_sunset_job.py  autonomous_research_job.py  maintenance_jobs.py  monthly_review_job.py  pattern_detector.py  pattern_learning_job.py  phase2_gate_job.py  self_diagnostics.py  workflow_monitor.py
app/llm/: __init__.py  factory.py  integration.py  providers.py  router.py
app/memory/: __init__.py  confidence.py  memory_store.py  retrieval.py  (+2 more)
audit/: jarvis_write_tool_smoke_test.txt.20260202T131733Z.bak  write_audit.jsonl
dashboard/: __init__.py  backend.py  index.html  task_status.py
docs/: INTELLIGENT_MODEL_ROUTER_READY.md  INTELLIGENT_MODEL_ROUTER_ROADMAP.md  JARVIS_FEEDBACK_INTEGRATED_SUMMARY.md  MEMORY_FEEDBACK_CYCLE.md  MEMORY_MONITORING.md  PERPLEXITY_INTEGRATION.md  PLUGIN_SKILL_API.md  PRIVACY_FORGETTING_ENDPOINTS.md  RELEASE_NOTES_2026-02-20.md  SANDBOX_GRAFANA_BEST_PRACTICE.md  SANDBOX_POLICY.md  TASKS.md  memory_alerting_dashboard_api.md  task_api_openapi.yaml
metrics/: fx.json  llm_daily_costs.jsonl
migrations/: 003_phase_16_4_notifications.sql  004_phase_16_4_memory.sql  005_phase_16_4_feedback.sql  006_coaching_domains.sql  006_n8n_workflow_tracking.py  007_thread_migration.sql  008_behavioral_baseline.sql  016_remediation_audit_log.sql  017_person_entity_upgrade.sql  018_person_profile_null_fix.sql  025_consciousness_epochs.sql  026_persistent_learn.sql  027_session_persistence.sql  028_sessions.sql  029_execute_action_persistence.sql  030_git_commits.sql  031_causal_events.sql  032_fix_outcome_known_boolean.sql  033_causal_events_v2.sql  033_dev_team_communication.sql  034_self_optimization.sql  036_hygiene_metadata.sql  037_memory_privacy_controls.sql  038_memory_layers.sql  039_context_aware_decisions.sql  039_memory_relevance_conflict_graph.sql  040_success_metrics_feedback_loop.sql  041_phase_5_6_adaptive_decay.sql  042_phase_5_5_consciousness_temporal.sql  043_add_work_namespace.sql  044_add_comms_namespace.sql  045_namespace_migration_state.sql  046_label_registry.sql  047_phase_6_2_emergent_behavior.sql  048_phase_6_3_consciousness_ethics.sql  049_phase_6_4_consciousness_support.sql  050_phase_6_5_advanced_consciousness.sql  051_phase_7_1_collaborative_intelligence.sql  052_phase_7_2_meta_cognitive_partnership.sql  053_phase_7_3_transcendent_problem_solving.sql  (+82 more)
scripts/: JARVIS_SCRIPT_INDEX.md  audit_grafana_no_data.py  backfill_labels.py  board-lint.sh  capabilities_drift_check.py  check-secrets.sh  check_agent_contract_scope.sh  check_session_prompt_governance.py  eval_retrieval.py  eval_retrieval_nightly.sh  fast-preflight.sh  feedback_review_snapshot.py  fix_work_migration_missing.py  generate_capabilities.py  generate_capability_catalog.py  guardrail_smoke_check.py  import_ideas_db.py  import_ideas_from_md.py  install_fx_cron.sh  jarvis_daily_3signal.sh  jarvis_onecmd.sh  jarvis_onecmd_cli.sh  jarvis_predeploy_oneclick.sh  jarvis_reality_check.sh  jarvis_safety_parallel.sh  jarvis_smart_deploy_cycle.sh  label_hygiene_weekly.sh  lint_task_subagent_evidence.py  migrate_legacy_work_origin.py  namespace_integrity_guard.py  namespace_migration_state.py  persistent_learn_migration.sql  refresh_capabilities_status.py  reindex_comms_namespace.py  reindex_work_namespace.py  scope_alias_review.py  scope_backfill.py  setup_calendar_local.py  sync_docker_to_ingestion.sh  test_anchors_smoke.py  (+10 more)
tests/: README.md  __init__.py  conftest.py  curl_tests.sh  hybrid_search_test_suite.sh  integration_helpers.py  test_advanced_complexity.py  test_agent_context_pool_service.py  test_agent_coordination_service.py  test_agent_coordinator.py  test_alias_sunset_job.py  test_api.py  test_api_mock.py  test_audio_digest.py  test_autonomy_loop.py  test_calendar_provider_hybrid.py  test_causal_v2.py  test_channel_observability_router.py  test_channel_router.py  test_ck04_ck05_scaffold.py  test_cktrack_inference_endpoints.py  test_confidence_scorer.py  test_consciousness_integration.py  test_context_aware_decisions.py  test_cost_aware_completion.py  test_coverage_report.sh  test_dashboard.py  test_dashboard_mock.py  test_diff_gate.py  test_dynamic_model_router.py  test_email_executor.py  test_entity_context_builder.py  test_entity_integration_day1.py  test_entity_payload.py  test_execute_action_phase0.py  test_execute_router.py  test_facette_detector.py  test_feedback_router.py  test_feedback_service.py  test_hybrid_search.py  (+47 more)
(+295 files in other folders)
